--- a/css/output.css
+++ b/css/output.css
@@ -19,7 +19,7 @@
 /* Track */
 
 ::-webkit-scrollbar-track {
-  background: #ffff;
+  background: white;
 }
 
 /* Handle */
@@ -141,6 +141,13 @@ a {
   transition: 0.3s;
 }
 
+.def-checkbox span:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: url("../img/icons/check.svg") no-repeat center center;
+}
+
 .swiperProductItems .swiper-pagination-bullet {
   transition: 0.3s;
 }
@@ -156,7 +163,7 @@ a {
 
 @media (max-width: 768px) {
   .swiper-button-next,
-.swiper-button-prev {
+  .swiper-button-prev {
     display: none;
   }
 
@@ -171,6 +178,36 @@ a {
 
 .product-item-slider .swiper-slide-active {
   opacity: 1 !important;
+}
+
+.slider-v3 {
+  position: relative;
+  display: block;
+  width: 40px;
+  height: 24px;
+  cursor: pointer;
+  border-radius: 1.5em;
+  transition: 350ms;
+  background: #ddd;
+}
+
+.slider-v3::after {
+  position: absolute;
+  content: "";
+  width: 16px;
+  height: 16px;
+  top: 4px;
+  left: 4px;
+  border-radius: 1.5em;
+  transition: width 200ms ease-out, height 300ms 50ms ease-in, top 300ms 50ms ease-in, left 250ms 50ms ease-in, background 300ms ease-in, box-shadow 300ms ease-in;
+  background: #f2f2f2;
+  box-shadow: 0 0 0 1.5em #f2f2f2 inset;
+}
+
+input:checked + .slider-v3::after {
+  left: 20px;
+  background: #009FFF;
+  box-shadow: 0 0 0 0 #f2f2f2 inset;
 }
 
 *, ::before, ::after{
@@ -974,6 +1011,12 @@ select{
   align-items: center;
 }
 
+.flex-js-s{
+  display: flex;
+  justify-content: flex-start;
+  align-items: start;
+}
+
 .flex-js-e{
   display: flex;
   justify-content: flex-start;
@@ -990,6 +1033,12 @@ select{
   display: flex;
   justify-content: end;
   align-items: center;
+}
+
+.flex-je-s{
+  display: flex;
+  justify-content: end;
+  align-items: start;
 }
 
 .sr-only{
@@ -1014,6 +1063,10 @@ select{
 
 .relative{
   position: relative;
+}
+
+.sticky{
+  position: sticky;
 }
 
 .\!bottom-6{
@@ -1092,6 +1145,26 @@ select{
   top: 50%;
 }
 
+.left-3{
+  left: 0.75rem;
+}
+
+.top-3{
+  top: 0.75rem;
+}
+
+.left-1\/2{
+  left: 50%;
+}
+
+.top-1\/2{
+  top: 50%;
+}
+
+.top-4{
+  top: 1rem;
+}
+
 .z-0{
   z-index: 0;
 }
@@ -1112,6 +1185,10 @@ select{
   grid-column: span 2 / span 2;
 }
 
+.col-span-3{
+  grid-column: span 3 / span 3;
+}
+
 .col-span-4{
   grid-column: span 4 / span 4;
 }
@@ -1124,21 +1201,26 @@ select{
   grid-column: span 7 / span 7;
 }
 
-.m-auto{
-  margin: auto;
-}
-
-.m-\[4px\]{
-  margin: 4px;
+.col-span-8{
+  grid-column: span 8 / span 8;
 }
 
 .m-\[auto\]{
   margin: auto;
 }
 
+.m-auto{
+  margin: auto;
+}
+
 .mx-1{
   margin-left: 0.25rem;
   margin-right: 0.25rem;
+}
+
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .mx-8{
@@ -1230,8 +1312,16 @@ select{
   margin-bottom: 20px;
 }
 
+.mb-\[24px\]{
+  margin-bottom: 24px;
+}
+
 .mb-\[25px\]{
   margin-bottom: 25px;
+}
+
+.mb-\[300px\]{
+  margin-bottom: 300px;
 }
 
 .mb-\[30px\]{
@@ -1254,12 +1344,20 @@ select{
   margin-bottom: 8px;
 }
 
+.ml-1{
+  margin-left: 0.25rem;
+}
+
 .ml-3{
   margin-left: 0.75rem;
 }
 
 .ml-\[-35px\]{
   margin-left: -35px;
+}
+
+.ml-\[24px\]{
+  margin-left: 24px;
 }
 
 .mr-1{
@@ -1278,16 +1376,36 @@ select{
   margin-right: -35px;
 }
 
+.mr-\[10px\]{
+  margin-right: 10px;
+}
+
 .mr-\[12px\]{
   margin-right: 12px;
+}
+
+.mr-\[16px\]{
+  margin-right: 16px;
+}
+
+.mr-\[30px\]{
+  margin-right: 30px;
 }
 
 .mr-\[45px\]{
   margin-right: 45px;
 }
 
+.mr-\[4px\]{
+  margin-right: 4px;
+}
+
 .mr-\[5px\]{
   margin-right: 5px;
+}
+
+.mr-\[80px\]{
+  margin-right: 80px;
 }
 
 .mr-\[8px\]{
@@ -1390,34 +1508,6 @@ select{
   margin-top: 70px;
 }
 
-.mr-\[10px\]{
-  margin-right: 10px;
-}
-
-.mr-\[30px\]{
-  margin-right: 30px;
-}
-
-.mb-\[24px\]{
-  margin-bottom: 24px;
-}
-
-.mr-\[80px\]{
-  margin-right: 80px;
-}
-
-.mr-\[16px\]{
-  margin-right: 16px;
-}
-
-.ml-\[24px\]{
-  margin-left: 24px;
-}
-
-.mr-\[4px\]{
-  margin-right: 4px;
-}
-
 .block{
   display: block;
 }
@@ -1454,8 +1544,16 @@ select{
   height: 1.5rem;
 }
 
+.h-8{
+  height: 2rem;
+}
+
 .h-\[150px\]{
   height: 150px;
+}
+
+.h-\[155px\]{
+  height: 155px;
 }
 
 .h-\[18px\]{
@@ -1570,6 +1668,10 @@ select{
   height: 869px;
 }
 
+.h-\[96px\]{
+  height: 96px;
+}
+
 .h-auto{
   height: auto;
 }
@@ -1578,8 +1680,16 @@ select{
   height: 100%;
 }
 
-.h-\[155px\]{
-  height: 155px;
+.h-\[220px\]{
+  height: 220px;
+}
+
+.h-\[184px\]{
+  height: 184px;
+}
+
+.h-\[162px\]{
+  height: 162px;
 }
 
 .max-h-\[100\%\]{
@@ -1590,10 +1700,6 @@ select{
   min-height: 420px;
 }
 
-.min-h-\[155px\]{
-  min-height: 155px;
-}
-
 .w-10{
   width: 2.5rem;
 }
@@ -1602,8 +1708,20 @@ select{
   width: 1rem;
 }
 
+.w-6{
+  width: 1.5rem;
+}
+
+.w-8{
+  width: 2rem;
+}
+
 .w-\[110px\]{
   width: 110px;
+}
+
+.w-\[116px\]{
+  width: 116px;
 }
 
 .w-\[183px\]{
@@ -1670,6 +1788,14 @@ select{
   width: 60px;
 }
 
+.w-\[70\%\]{
+  width: 70%;
+}
+
+.w-\[80\%\]{
+  width: 80%;
+}
+
 .w-\[80px\]{
   width: 80px;
 }
@@ -1680,6 +1806,18 @@ select{
 
 .w-full{
   width: 100%;
+}
+
+.w-\[90\%\]{
+  width: 90%;
+}
+
+.w-\[115px\]{
+  width: 115px;
+}
+
+.w-\[212px\]{
+  width: 212px;
 }
 
 .min-w-10{
@@ -1702,6 +1840,14 @@ select{
   min-width: 4px;
 }
 
+.min-w-\[212px\]{
+  min-width: 212px;
+}
+
+.max-w-\[100\%\]{
+  max-width: 100%;
+}
+
 .max-w-\[1000px\]{
   max-width: 1000px;
 }
@@ -1714,12 +1860,20 @@ select{
   max-width: 1300px;
 }
 
+.max-w-\[250px\]{
+  max-width: 250px;
+}
+
 .max-w-\[273px\]{
   max-width: 273px;
 }
 
 .max-w-\[400px\]{
   max-width: 400px;
+}
+
+.max-w-\[440px\]{
+  max-width: 440px;
 }
 
 .max-w-\[490px\]{
@@ -1742,6 +1896,10 @@ select{
   max-width: 650px;
 }
 
+.max-w-\[670px\]{
+  max-width: 670px;
+}
+
 .max-w-\[677px\]{
   max-width: 677px;
 }
@@ -1754,16 +1912,16 @@ select{
   max-width: 752px;
 }
 
-.max-w-\[440px\]{
-  max-width: 440px;
+.max-w-\[252px\]{
+  max-width: 252px;
 }
 
-.max-w-\[100\%\]{
-  max-width: 100%;
+.max-w-\[\]{
+  max-width: ;
 }
 
-.max-w-\[670px\]{
-  max-width: 670px;
+.max-w-\[238px\]{
+  max-width: 238px;
 }
 
 .grow-\[1\]{
@@ -1775,8 +1933,18 @@ select{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-x-\[-50\%\]{
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .rotate-180{
   --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[-90deg\]{
+  --tw-rotate: -90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1790,6 +1958,10 @@ select{
 
 .cursor-pointer{
   cursor: pointer;
+}
+
+.resize-none{
+  resize: none;
 }
 
 .list-disc{
@@ -1812,12 +1984,12 @@ select{
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.grid-cols-7{
-  grid-template-columns: repeat(7, minmax(0, 1fr));
-}
-
 .grid-cols-5{
   grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-7{
+  grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1860,12 +2032,24 @@ select{
   gap: 1rem;
 }
 
+.gap-5{
+  gap: 1.25rem;
+}
+
 .gap-6{
   gap: 1.5rem;
 }
 
 .gap-8{
   gap: 2rem;
+}
+
+.gap-\[138px\]{
+  gap: 138px;
+}
+
+.gap-\[20px\]{
+  gap: 20px;
 }
 
 .gap-\[30px\]{
@@ -1878,10 +2062,6 @@ select{
 
 .gap-\[60px\]{
   gap: 60px;
-}
-
-.gap-\[20px\]{
-  gap: 20px;
 }
 
 .gap-x-\[30px\]{
@@ -1932,6 +2112,10 @@ select{
   border-radius: 30px;
 }
 
+.rounded-\[40px\]{
+  border-radius: 40px;
+}
+
 .rounded-\[4px\]{
   border-radius: 4px;
 }
@@ -1952,24 +2136,20 @@ select{
   border-radius: 9999px;
 }
 
-.rounded-\[\#6E6E6E\]{
-  border-radius: #6E6E6E;
-}
-
-.rounded-\[40px\]{
-  border-radius: 40px;
-}
-
 .border{
   border-width: 1px;
+}
+
+.border-0{
+  border-width: 0px;
 }
 
 .border-2{
   border-width: 2px;
 }
 
-.border-0{
-  border-width: 0px;
+.border-\[2px\]{
+  border-width: 2px;
 }
 
 .border-b{
@@ -1978,6 +2158,10 @@ select{
 
 .border-b-\[1px\]{
   border-bottom-width: 1px;
+}
+
+.border-r{
+  border-right-width: 1px;
 }
 
 .border-dotted{
@@ -1998,6 +2182,10 @@ select{
   border-color: rgb(50 50 50 / var(--tw-border-opacity, 1));
 }
 
+.border-\[\#6E6E6E40\]{
+  border-color: #6E6E6E40;
+}
+
 .border-\[\#6E6E6E\]\/25{
   border-color: rgb(110 110 110 / 0.25);
 }
@@ -2005,6 +2193,14 @@ select{
 .border-\[\#C7C7C7\]{
   --tw-border-opacity: 1;
   border-color: rgb(199 199 199 / var(--tw-border-opacity, 1));
+}
+
+.border-\[none\]{
+  border-color: none;
+}
+
+.border-\[rgba\(110\2c 110\2c 110\2c 0\.25\)\]{
+  border-color: rgba(110,110,110,0.25);
 }
 
 .border-\[rgba\(33\2c 33\2c 33\2c 0\.2\)\]{
@@ -2016,12 +2212,13 @@ select{
   border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
 }
 
-.border-\[rgba\(110\2c 110\2c 110\2c 0\.25\)\]{
-  border-color: rgba(110,110,110,0.25);
+.border-\[\#DBDBDB\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(219 219 219 / var(--tw-border-opacity, 1));
 }
 
-.border-\[none\]{
-  border-color: none;
+.\!bg-transparent{
+  background-color: transparent !important;
 }
 
 .bg-\[\#165FFE\]{
@@ -2039,6 +2236,11 @@ select{
   background-color: rgb(31 204 97 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#212121\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 33 33 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[\#262626\]{
   --tw-bg-opacity: 1;
   background-color: rgb(38 38 38 / var(--tw-bg-opacity, 1));
@@ -2052,6 +2254,10 @@ select{
 .bg-\[\#3B4B49\]{
   --tw-bg-opacity: 1;
   background-color: rgb(59 75 73 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#6E6E6E1A\]{
+  background-color: #6E6E6E1A;
 }
 
 .bg-\[\#6E6E6E\]{
@@ -2160,6 +2366,10 @@ select{
      object-fit: cover;
 }
 
+.p-10{
+  padding: 2.5rem;
+}
+
 .p-4{
   padding: 1rem;
 }
@@ -2184,9 +2394,22 @@ select{
   padding: 50px;
 }
 
+.p-2{
+  padding: 0.5rem;
+}
+
+.p-9{
+  padding: 2.25rem;
+}
+
 .px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3{
@@ -2214,9 +2437,24 @@ select{
   padding-right: 2rem;
 }
 
+.px-\[16px\]{
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
 .px-\[24px\]{
   padding-left: 24px;
   padding-right: 24px;
+}
+
+.px-\[30px\]{
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.px-\[32px\]{
+  padding-left: 32px;
+  padding-right: 32px;
 }
 
 .px-\[6px\]{
@@ -2239,6 +2477,11 @@ select{
   padding-bottom: 1rem;
 }
 
+.py-\[10px\]{
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 .py-\[110px\]{
   padding-top: 110px;
   padding-bottom: 110px;
@@ -2247,6 +2490,11 @@ select{
 .py-\[16px\]{
   padding-top: 16px;
   padding-bottom: 16px;
+}
+
+.py-\[24px\]{
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .py-\[4px\]{
@@ -2264,47 +2512,32 @@ select{
   padding-bottom: 70px;
 }
 
-.px-\[32px\]{
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-.py-\[24px\]{
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-
-.py-\[\]{
-  padding-top: ;
-  padding-bottom: ;
-}
-
-.px-\[px10px\]{
-  padding-left: px10px;
-  padding-right: px10px;
-}
-
-.py-\[10px\]{
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.px-\[10px\]{
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.px-\[16px\]{
-  padding-left: 16px;
-  padding-right: 16px;
+.pb-2{
+  padding-bottom: 0.5rem;
 }
 
 .pb-3{
   padding-bottom: 0.75rem;
 }
 
+.pb-4{
+  padding-bottom: 1rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
+.pb-6{
+  padding-bottom: 1.5rem;
+}
+
 .pe-2{
   padding-inline-end: 0.5rem;
+}
+
+.pl-2{
+  padding-left: 0.5rem;
 }
 
 .pl-3{
@@ -2418,6 +2651,10 @@ select{
 
 .leading-\[110\%\]{
   line-height: 110%;
+}
+
+.leading-\[15px\]{
+  line-height: 15px;
 }
 
 .leading-\[24px\]{
@@ -2657,6 +2894,24 @@ select{
 
 .peer:checked ~ .peer-checked\:left-\[20px\]{
   left: 20px;
+}
+
+.peer:checked ~ .peer-checked\:border-\[4px\]{
+  border-width: 4px;
+}
+
+.peer:checked ~ .peer-checked\:border-\[5px\]{
+  border-width: 5px;
+}
+
+.peer:checked ~ .peer-checked\:border-blue{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
+}
+
+.peer:checked ~ .peer-checked\:border-\[\#009FFF\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
 }
 
 .peer:checked ~ .peer-checked\:bg-\[\#009FFF\]{
