--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #ffff;
+  background: white;
 }
 
 /* Handle */
@@ -124,6 +124,12 @@ a {
   align-items: center;
   transition: 0.3s;
 }
+.def-checkbox span:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: url("../img/icons/check.svg") no-repeat center center;
+}
 
 .swiperProductItems .swiper-pagination-bullet {
   transition: 0.3s;
@@ -139,10 +145,9 @@ a {
 
 @media (max-width: 768px) {
   .swiper-button-next,
-.swiper-button-prev {
+  .swiper-button-prev {
     display: none;
   }
-
   .swiper-pagination {
     display: block;
   }
@@ -152,6 +157,36 @@ a {
 }
 .product-item-slider .swiper-slide-active {
   opacity: 1 !important;
+}
+
+.slider-v3 {
+  position: relative;
+  display: block;
+  width: 40px;
+  height: 24px;
+  cursor: pointer;
+  border-radius: 1.5em;
+  transition: 350ms;
+  background: #ddd;
+}
+
+.slider-v3::after {
+  position: absolute;
+  content: "";
+  width: 16px;
+  height: 16px;
+  top: 4px;
+  left: 4px;
+  border-radius: 1.5em;
+  transition: width 200ms ease-out, height 300ms 50ms ease-in, top 300ms 50ms ease-in, left 250ms 50ms ease-in, background 300ms ease-in, box-shadow 300ms ease-in;
+  background: #f2f2f2;
+  box-shadow: 0 0 0 1.5em #f2f2f2 inset;
+}
+
+input:checked + .slider-v3::after {
+  left: 20px;
+  background: #009FFF;
+  box-shadow: 0 0 0 0 #f2f2f2 inset;
 }
 
 @tailwind base;
