--- a/css/style.scss
+++ b/css/style.scss
@@ -159,12 +159,12 @@ a {
     transition: 0.3s;
 
 
-    //&:after{
-    //  content: "";
-    //  width: 100%;
-    //  height: 100%;
-    //  background: url("../img/icons/check.svg") no-repeat center center;
-    //}
+    &:after{
+      content: "";
+      width: 100%;
+      height: 100%;
+      background: url("../img/icons/check.svg") no-repeat center center;
+    }
   }
 }
 
@@ -200,6 +200,43 @@ a {
   .swiper-slide-active{
     opacity: 1 !important;
   }
+}
+
+.slider-v3 {
+  position: relative;
+  display: block;
+  width: 40px;
+  height: 24px;
+  cursor: pointer;
+  border-radius: 1.5em;
+  transition: 350ms;
+  background: #ddd;
+}
+
+// ********** Switch:
+.slider-v3::after {
+  position: absolute;
+  content:'';
+  width: 16px;
+  height: 16px;
+  top: 4px;
+  left: 4px;
+  border-radius: 1.5em;
+  transition:
+          width 200ms ease-out,
+          height 300ms 50ms ease-in,
+          top 300ms 50ms ease-in,
+          left 250ms 50ms ease-in,
+          background 300ms ease-in,
+          box-shadow 300ms ease-in;
+  background: #f2f2f2;
+  box-shadow: 0 0 0 1.5em #f2f2f2 inset;
+}
+
+input:checked + .slider-v3::after {
+  left: 20px;
+  background: #009FFF;
+  box-shadow: 0 0 0 0 #f2f2f2 inset;
 }
 
 
