--- a/components/footer.html
+++ b/components/footer.html
@@ -29,10 +29,10 @@
             </button>
           </div>
 
-          <label class="def-checkbox flex-js-c mt-2 !text-white">
+          <label class="def-checkbox flex-js-s mt-2 !text-white text-[12px]">
             <input type="checkbox" required>
             <span class="mr-2"></span>
-            Согласен с условиями согласия на обработку <a href="#" class="underline mx-1">персональных данных</a> и <a href="#" class="underline mx-1">политики конфендициальности</a>
+            <p class="text-[14px] text-white">Согласен с условиями согласия на обработку <a href="#" class="underline mx-1">персональных данных</a> и <a href="#" class="underline mx-1">политики конфендициальности</a></p>
           </label>
         </form>
       </div>
@@ -41,7 +41,7 @@
 </div>
 
 
-<footer class="bg-[#262626] pt-10 md:pt-[91px]">
+<footer class="bg-[#262626] pt-10 md:pt-[91px] pb-8">
   <div class="container">
     <div class="w-full grid-cols-12 gap-10 hidden min-[850px]:grid">
       <div class="col-span-4 min-[1300px]:col-span-3">
