--- a/components/navbar.html
+++ b/components/navbar.html
@@ -22,11 +22,11 @@
             </div>
           </div>
         </div>
-        <span class="text-white">Контакты</span>
-        <div class="text-white flex-js-c gap-2">Покупателям
+        <span class="text-white text-[14px]">Контакты</span>
+        <div class="text-white flex-js-c gap-2 text-[14px]">Покупателям
           <img src="img/icons/down.svg" alt="">
         </div>
-        <div class="text-white cursor-pointer flex-js-c gap-2">
+        <div class="text-white cursor-pointer flex-js-c gap-2 text-[14px]">
           <img src="img/icons/user-white.svg" alt="user-white.svg">
           Регистрация и вход
         </div>
@@ -41,13 +41,13 @@
     <div class="w-full flex-jsb-c gap-4">
       <div class="flex-js-c gap-4">
         <a href="/home.html">
-          <img src="img/logo-header.svg" alt="logo" class="w-full max-w-[273px] hidden min-[1433px]:block">
+          <img src="img/logo-header.svg" alt="logo" class="w-full max-w-[200px] hidden min-[1433px]:block">
           <img src="img/icons/fish-min-logo.svg" alt="logo" class="w-full min-w-[50px] block min-[1433px]:hidden">
         </a>
 
         <button
-            class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white
-             hover:bg-blue/80 transition min-w-[150px] flex min-[640px]:hidden">
+            class="bg-blue rounded-[8px] px-4 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white
+             hover:bg-blue/80 transition min-w-[150px] flex min-[640px]:hidden text-[14px]">
           <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
           Каталог
         </button>
@@ -55,17 +55,17 @@
 
       <div class="flex-jsb-c gap-4 min-[640px]:flex flex-grow">
         <button
-            class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[640px]:flex-jsb-c gap-3 text-white
-             hover:bg-blue/80 transition min-w-[150px] flex max-[640px]:hidden">
+            class="bg-blue rounded-[8px] px-4 h-[42px] flex-js-c min-w-[640px]:flex-jsb-c gap-3 text-white text-[14px]
+             hover:bg-blue/80 transition min-w-[130px] flex max-[640px]:hidden">
           <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
           Каталог
         </button>
-        <form action="#" class="w-full min-[1328px]:mr-9 bg-blue rounded-[8px] flex-jsb-c h-[50px] p-[2px] hidden min-[640px]:flex">
+        <form action="#" class="w-full min-[1328px]:mr-9 bg-blue rounded-[8px] flex-jsb-c h-[42px] p-[2px] hidden min-[640px]:flex">
           <label class="w-full h-full bg-white rounded-[6px] overflow-hidden">
-            <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[6px] border-none"
+            <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[6px] border-none text-[14px]"
                    placeholder="Поиск по сайту">
           </label>
-          <button class="w-[80px] h-[50px] bg-transparent flex-jc-c" type="submit">
+          <button class="w-[80px] h-[42px] bg-transparent flex-jc-c" type="submit">
             <img src="img/icons/search-white.svg" alt="search-white">
           </button>
         </form>
@@ -75,14 +75,14 @@
       <div class="flex-jsb-c gap-2 lg:gap-8">
 
 
-        <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <a href="#" class="flex-js-c gap-4 text-[14px] text-black text-medium">
           <img src="img/icons/heard-blue.svg" alt="heard-blue" class="w-6">
-          <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Избранное</span>
+          <span class="hidden min-[1150px]:inline-block hover:text-blue transition text-[14px]">Избранное</span>
         </a>
 
         <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
           <img src="img/icons/rows-block.svg" alt="rows-block">
-          <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Сравнения</span>
+          <span class="hidden min-[1150px]:inline-block hover:text-blue transition text-[14px]">Сравнения</span>
         </a>
 
         <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
@@ -91,7 +91,7 @@
             <span
                 class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
           </div>
-          <span class="hidden min-[1150px]:inline-block hover:text-blue transition cursor-pointer">Корзина</span>
+          <span class="hidden min-[1150px]:inline-block hover:text-blue transition cursor-pointer text-[14px]">Корзина</span>
         </div>
 
       </div>
@@ -133,11 +133,11 @@
   </div>
 
 
-  <form action="#" class="w-full min-[1328px]:mr-9 bg-blue rounded-[8px] flex-jsb-c h-[50px] p-[2px]">
+  <form action="#" class="w-full min-[1328px]:mr-9 bg-blue rounded-[8px] flex-jsb-c h-[42px] p-[2px]">
     <label class="w-full h-full bg-white rounded-[6px] overflow-hidden">
       <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[6px] border-none" placeholder="Поиск по сайту">
     </label>
-    <button class="w-[80px] h-[50px] bg-transparent flex-jc-c" type="submit">
+    <button class="w-[80px] h-[42px] bg-transparent flex-jc-c" type="submit">
       <img src="img/icons/search-white.svg" alt="search-white">
     </button>
   </form>
@@ -148,40 +148,40 @@
 <div class="container hidden sm:block">
   <div
       class="w-full h-[67px] bg-[#F4F4F4] rounded-[16px] px-8 flex-jsb-c min-w-[1400px]:gap-16 overflow-x-auto bottom-scroll-none sm:flex">
-    <div class="w-full flex-jsb-c min-w-[1300px]">
-      <div class="flex-jsb-c gap-6 h-full w-[40%]">
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+    <div class="w-full flex-js-c min-w-[1300px]">
+      <div class="flex-js-c gap-6 h-full w-[40%]">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
           <img src="img/icons/like-blue.svg" alt="like-blue.svg">
           Подарочные сертификаты
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
           <img src="img/icons/percent.svg" alt="percent">
           Скидки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
           <img src="img/icons/star-lik.svg" alt="star-lik">
           Новинки
         </a>
       </div>
 
-      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8 lg:mx-12"></div>
-      <div class="flex-jsb-c gap-6 h-full w-[60%]">
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+      <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mr-8"></div>
+      <div class="flex-js-c gap-6 h-full w-[60%]">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
           Удилища
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
           Катушки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
           Приманки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
           Аксессуары
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
           Оснастка
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
+        <a href="#" class="flex-js-c gap-2 text-black font-medium hover:text-blue">
           Экипировка
         </a>
       </div>
