--- a/components/product-card.html
+++ b/components/product-card.html
@@ -1,13 +1,13 @@
 <div class="w-full md:transition transform hover:scale-[1.01] product-item-hover rounded-[10px] group">
-  <div class="w-full h-[217px] md:h-[427px] border rounded-[16px] relative transition md:group-hover:border-transparent">
+  <div class="w-full h-[180px] md:h-[320px] border rounded-[16px] relative transition md:group-hover:border-transparent">
 
     <div class="absolute left-[10px] top-[10px] w-[calc(100%-16px)] flex-jsb-s gap-2 z-10">
-      <div class="flex max-[1700px]:flex-col gap-2 max-[1700px]:items-start">
+      <div class="flex justify-start items-start flex-col gap-2">
         <div class="py-[4px] px-[10px] bg-[#FB2FBE] rounded-[8px] text-[13px] font-bold
-                 text-[white] mr-[8px]">Рассрочка 0-0-24
+                 text-[white]">Рассрочка 0-0-24
         </div>
         <div class="py-[4px] px-[10px] bg-[#16B34B] rounded-[8px] text-[13px] font-bold
-                  text-[white] ">-36%
+                  text-[white]">-36%
         </div>
       </div>
       <div class=" flex-je-c gap-2 hidden md:flex">
@@ -24,13 +24,13 @@
     <div class="swiper swiperProductItems h-full relative">
       <div class="swiper-wrapper">
         <div class="swiper-slide px-6 flex-jc-c">
-          <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
+          <img src="img/products/product1.png" alt="product1" class="w-full h-full object-contain">
         </div>
         <div class="swiper-slide px-6 flex-jc-c">
-          <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
+          <img src="img/products/product1.png" alt="product1" class="w-full h-full object-contain">
         </div>
         <div class="swiper-slide px-6 flex-jc-c">
-          <img src="img/products/product1.png" alt="product1" class="w-full h-ful object-contain">
+          <img src="img/products/product1.png" alt="product1" class="w-full h-full object-contain">
         </div>
       </div>
       <div class="swiper-pagination-inner flex-jc-c absolute left-0 !bottom-6 z-[100000]"></div>
@@ -39,11 +39,11 @@
 
   </div>
   <div class="w-full sm:p-4">
-    <h3 class="sm:text-[18px] text-[#212121] mt-1 tracking-[-0.18px] leading-[24px] md:h-[72px] mb-2 md:mb-0">
+    <h3 class="text-[#212121] mt-1 tracking-[-0.18px] sm:leading-[24px] md:h-[72px] mb-2 md:mb-0 text-[14px] sm:text-[16px]">
       Воблер для рыбалки глубоководный Jaxon Diver DR 12 см 28 гр #U
     </h3>
     <div class="flex-jsb-c">
-      <div class="flex-js-c text-[#6E6E6E] gap-[5px] text-[14px] md:text-[16px]">
+      <div class="flex-js-c text-[#6E6E6E] gap-[5px] text-[14px]">
         <img src="img/icons/star-yellow.svg" alt="star-yellow">
         4.2
         <span class="min-w-[4px] max-w-[4px] w-[4px] h-[4px] rounded-full bg-[#6E6E6E] mx-1"></span>
@@ -64,14 +64,14 @@
       <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
     </div>
 
-    <h4 class="text-[20px] font-semibold block md:hidden text-[#CF301B]">3 200 ₽</h4>
+    <h4 class="text-[18px] font-semibold block md:hidden text-[#CF301B]">3 200 ₽</h4>
     <h4 class="text-[14px] block md:hidden line-through">400 ₽</h4>
 
     <div class="flex-jsb-c mt-2">
-      <h4 class="text-[24px] font-semibold hidden md:block">3 200 ₽</h4>
+      <h4 class="text-[20px] font-semibold hidden md:block">3 200 ₽</h4>
       <button
           class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
-        <span class="hidden sm:inline-block text-white">В корзину</span>
+        <span class="hidden sm:inline-block text-white text-[14px]">В корзину</span>
         <img src="img/icons/basket-white.svg" alt="">
       </button>
 
