--- a/css/output.css
+++ b/css/output.css
@@ -32,7 +32,7 @@ a {
 }
 
 .container {
-  max-width: 1720px !important;
+  max-width: 1200px !important;
   margin: 0 auto;
 }
 
@@ -1425,6 +1425,18 @@ select{
   top: calc(100% + 6px);
 }
 
+.right-\[100px\]{
+  right: 100px;
+}
+
+.right-\[10px\]{
+  right: 10px;
+}
+
+.top-\[0\]{
+  top: 0;
+}
+
 .z-0{
   z-index: 0;
 }
@@ -1946,6 +1958,10 @@ select{
   margin-top: auto;
 }
 
+.mr-8{
+  margin-right: 2rem;
+}
+
 .block{
   display: block;
 }
@@ -2222,6 +2238,26 @@ select{
   height: 100%;
 }
 
+.h-\[300px\]{
+  height: 300px;
+}
+
+.h-\[180px\]{
+  height: 180px;
+}
+
+.h-\[280px\]{
+  height: 280px;
+}
+
+.h-\[\]{
+  height: ;
+}
+
+.h-\[250px\]{
+  height: 250px;
+}
+
 .max-h-80{
   max-height: 20rem;
 }
@@ -2410,6 +2446,22 @@ select{
   width: 100%;
 }
 
+.w-\[\]{
+  width: ;
+}
+
+.w-\[50\%\]{
+  width: 50%;
+}
+
+.w-\[45\%\]{
+  width: 45%;
+}
+
+.w-\[200px\]{
+  width: 200px;
+}
+
 .min-w-10{
   min-width: 2.5rem;
 }
@@ -2478,6 +2530,14 @@ select{
   min-width: 100%;
 }
 
+.min-w-\[120px\]{
+  min-width: 120px;
+}
+
+.min-w-\[130px\]{
+  min-width: 130px;
+}
+
 .max-w-5{
   max-width: 1.25rem;
 }
@@ -2500,6 +2560,10 @@ select{
 
 .max-w-\[170px\]{
   max-width: 170px;
+}
+
+.max-w-\[200px\]{
+  max-width: 200px;
 }
 
 .max-w-\[210px\]{
@@ -2604,6 +2668,10 @@ select{
 
 .max-w-md{
   max-width: 28rem;
+}
+
+.max-w-\[550px\]{
+  max-width: 550px;
 }
 
 .flex-1{
@@ -2727,6 +2795,10 @@ select{
 
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
 }
 
 .justify-center{
@@ -3664,6 +3736,10 @@ select{
   padding-top: 80px;
 }
 
+.pb-8{
+  padding-bottom: 2rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -3751,6 +3827,14 @@ select{
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-\[54px\]{
+  font-size: 54px;
+}
+
+.text-\[45px\]{
+  font-size: 45px;
 }
 
 .font-bold{
@@ -3963,6 +4047,10 @@ select{
 
 .text-white\/80{
   color: rgb(255 255 255 / 0.8);
+}
+
+.text-\[\]{
+  color: ;
 }
 
 .underline{
@@ -4489,16 +4577,8 @@ select{
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
-  .max-\[1200px\]\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .max-\[1200px\]\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .max-\[1200px\]\:grid-cols-4{
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
 
@@ -4791,6 +4871,10 @@ select{
     width: 100%;
   }
 
+  .max-\[767px\]\:w-\[20vw\]{
+    width: 20vw;
+  }
+
   .max-\[767px\]\:max-w-\[100\%\]{
     max-width: 100%;
   }
@@ -4803,6 +4887,14 @@ select{
     max-width: 80px;
   }
 
+  .max-\[767px\]\:max-w-\[70px\]{
+    max-width: 70px;
+  }
+
+  .max-\[767px\]\:max-w-\[60px\]{
+    max-width: 60px;
+  }
+
   .max-\[767px\]\:grid-cols-1{
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
@@ -4813,10 +4905,6 @@ select{
 
   .max-\[767px\]\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .max-\[767px\]\:grid-cols-3{
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .max-\[767px\]\:flex-col{
@@ -4998,10 +5086,6 @@ select{
     display: block;
   }
 
-  .max-\[576px\]\:grid-cols-1{
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
   .max-\[576px\]\:border-b{
     border-bottom-width: 1px;
   }
@@ -5154,6 +5238,10 @@ select{
     height: 570px;
   }
 
+  .sm\:h-\[280px\]{
+    height: 280px;
+  }
+
   .sm\:w-\[300px\]{
     width: 300px;
   }
@@ -5186,6 +5274,11 @@ select{
     padding: 1.5rem;
   }
 
+  .sm\:py-12{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
   .sm\:pr-\[100px\]{
     padding-right: 100px;
   }
@@ -5212,6 +5305,14 @@ select{
 
   .sm\:text-\[44px\]{
     font-size: 44px;
+  }
+
+  .sm\:text-\[16px\]{
+    font-size: 16px;
+  }
+
+  .sm\:leading-\[24px\]{
+    line-height: 24px;
   }
 
   .min-\[640px\]\:flex{
@@ -5306,6 +5407,18 @@ select{
 
   .md\:h-auto{
     height: auto;
+  }
+
+  .md\:h-\[250px\]{
+    height: 250px;
+  }
+
+  .md\:h-\[3200px\]{
+    height: 3200px;
+  }
+
+  .md\:h-\[320px\]{
+    height: 320px;
   }
 
   .md\:w-1\/2{
@@ -5464,10 +5577,6 @@ select{
 
   .lg\:max-w-\[670px\]{
     max-width: 670px;
-  }
-
-  .lg\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:gap-8{
